--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="NAudio" Version="2.2.1" />
+      <PackageReference Include="OpenAL.Soft" Version="1.23.1" />
       <PackageReference Include="OpenTK" Version="5.0.0-pre.13" />
     </ItemGroup>
 
