--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -5,9 +5,11 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ImGui.NET" Version="1.91.0.1" />
       <PackageReference Include="NAudio" Version="2.2.1" />
       <PackageReference Include="OpenAL.Soft" Version="1.23.1" />
       <PackageReference Include="OpenTK" Version="5.0.0-pre.13" />
