--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -19,6 +19,9 @@
       <None Update="Music\kill_all.mp3">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Music\main_theme.mp3">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Music\ok_lets_go.mp3">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
