--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -4,14 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Main Window]
-Pos=586,271
-Size=897,1007
+Pos=202,46
+Size=1296,773
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Particles render]
-Pos=1691,325
-Size=1295,771
+Pos=202,821
+Size=1296,768
 Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=202,46 Size=1296,1543 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=897,504 Selected=0x352FAD1B
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=897,501 Selected=0x473925C7
 
