--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -4,19 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Main Window]
-Pos=202,46
-Size=1296,773
+Pos=301,65
+Size=1296,720
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Particles render]
-Pos=202,821
-Size=1296,768
+Pos=301,787
+Size=1296,715
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Performance]
+Pos=301,1504
+Size=1296,104
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=202,46 Size=1296,1543 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=897,504 Selected=0x352FAD1B
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=897,501 Selected=0x473925C7
+DockNode      ID=0x00000001 Pos=301,65 Size=1296,1543 Split=Y
+  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1296,1437 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=897,504 Selected=0x352FAD1B
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=897,501 Selected=0x473925C7
+  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1296,104 Selected=0x60B79D0E
 
