--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -4,27 +4,58 @@ Size=400,400
 Collapsed=0
 
 [Window][Main Window]
-Pos=301,65
-Size=1296,720
+Pos=300,65
+Size=1296,1437
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Particles render]
-Pos=301,787
-Size=1296,715
+Pos=289,897
+Size=1299,769
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Performance]
-Pos=301,1504
-Size=1296,104
+Pos=289,1668
+Size=1072,321
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
+
+[Window][Audio Settings]
+Pos=289,113
+Size=1299,1553
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][Gameplay]
+Pos=289,113
+Size=1299,1553
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Editor]
+Pos=471,64
+Size=1035,1544
+Collapsed=0
+DockId=0x00000002,2
+
+[Window][Some]
+Pos=1363,1668
+Size=225,321
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Assets]
+Pos=289,113
+Size=1299,1553
+Collapsed=0
+DockId=0x00000002,2
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=301,65 Size=1296,1543 Split=Y
-  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1296,1437 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=897,504 Selected=0x352FAD1B
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=897,501 Selected=0x473925C7
-  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1296,104 Selected=0x60B79D0E
+DockNode      ID=0x00000006 Pos=289,113 Size=1299,1876 Split=Y Selected=0x3D723CB9
+  DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=864,580 Split=Y Selected=0x9F27EDF6
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1079,777 Selected=0xE337ABC7
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1079,765 Selected=0x473925C7
+  DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=864,120 Split=X Selected=0x60B79D0E
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1097,320 Selected=0x60B79D0E
+    DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=230,320 Selected=0x8E4F2BBD
 
