Adjust game render to be 16/9

--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -9,53 +9,64 @@ Size=1296,1437
 Collapsed=0
 
 [Window][Particles render]
-Pos=289,897
-Size=1299,769
+Pos=692,0
+Size=3148,2115
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000003,1
 
 [Window][Performance]
-Pos=289,1668
-Size=1072,321
+Pos=0,1759
+Size=342,356
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Audio Settings]
-Pos=289,113
-Size=1299,1553
+Pos=0,0
+Size=937,1757
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000004,1
 
 [Window][Gameplay]
-Pos=289,113
-Size=1299,1553
+Pos=0,0
+Size=937,1757
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Editor]
 Pos=471,64
 Size=1035,1544
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000004,2
 
 [Window][Some]
-Pos=1363,1668
-Size=225,321
+Pos=344,1759
+Size=593,356
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000006,0
 
 [Window][Assets]
-Pos=289,113
-Size=1299,1553
+Pos=0,0
+Size=937,1757
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000004,2
+
+[Window][Game render]
+Pos=939,0
+Size=2901,2115
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,0
+Size=3840,2115
+Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000006 Pos=289,113 Size=1299,1876 Split=Y Selected=0x3D723CB9
-  DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=864,580 Split=Y Selected=0x9F27EDF6
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1079,777 Selected=0xE337ABC7
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=1079,765 Selected=0x473925C7
-  DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=864,120 Split=X Selected=0x60B79D0E
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1097,320 Selected=0x60B79D0E
-    DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=230,320 Selected=0x8E4F2BBD
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X
+  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=937,1827 Split=Y Selected=0xE337ABC7
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=649,1757 CentralNode=1 Selected=0xE337ABC7
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=649,356 Split=X Selected=0x60B79D0E
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=342,356 Selected=0x60B79D0E
+      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=593,356 Selected=0x8E4F2BBD
+  DockNode      ID=0x00000003 Parent=0x7C6B3D9B SizeRef=2901,1827 Selected=0xC5308903
 
