--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -9,6 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\Step.Engine\Step.Engine.csproj" />
     </ItemGroup>
 
