--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -9,64 +9,199 @@ Size=1296,1437
 Collapsed=0
 
 [Window][Particles render]
-Pos=939,0
-Size=2901,2064
+Pos=620,0
+Size=3220,1852
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Performance]
-Pos=0,1708
-Size=342,356
+Pos=0,1675
+Size=619,440
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=937,1706
+Size=618,1673
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000002,1
 
 [Window][Gameplay]
-Pos=0,0
-Size=937,1706
+Size=937,1757
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Editor]
 Pos=471,64
 Size=1035,1544
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x00000002,2
 
 [Window][Some]
-Pos=344,1708
-Size=593,356
+Pos=3535,1675
+Size=305,440
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Assets]
 Pos=0,0
-Size=937,1706
+Size=618,1673
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x00000002,2
 
 [Window][Game render]
-Pos=939,0
-Size=2901,2064
+Pos=620,0
+Size=3220,1673
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=3840,2064
+Size=3840,2115
 Collapsed=0
 
+[Window][Scene]
+Pos=0,0
+Size=618,1673
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Dear ImGui Demo]
+Pos=337,930
+Size=1288,969
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=2635,437
+Size=913,1202
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=3840,2115
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=2074,48
+Size=1113,2109
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=1356,499
+Size=926,689
+Collapsed=0
+
+[Window][Example: Property editor/##tree_73339443]
+IsChild=1
+Size=300,641
+
+[Window][Example: Assets Browser]
+Pos=1286,577
+Size=2185,1254
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=877,460
+Size=1443,1284
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=621,1675
+Size=2912,440
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
+IsChild=1
+Size=1343,260
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=683,208
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=781,898
+Size=1123,234
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=1113,857
+Size=948,691
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=1045,382
+Size=1171,929
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,849
+
+[Window][Example: Auto-resizing window]
+Pos=706,346
+Size=1291,762
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=950,633
+Size=885,100
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=752,647
+Size=885,100
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=939,546
+Size=479,74
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=875,632
+Size=520,600
+Collapsed=0
+
+[Table][0x49F8DCEA,3]
+RefScale=26
+Column 0  Weight=1.0000
+Column 1  Width=168
+Column 2  Width=252
+
+[Table][0x45A0E60D,7]
+RefScale=26
+Column 0  Width=98
+Column 1  Width=224
+Column 2  Width=224
+Column 3  Width=224
+Column 4  Width=224
+Column 5  Width=224
+Column 6  Width=224
+
+[Table][0x64418101,3]
+RefScale=26
+Column 0  Width=126
+Column 1  Width=126
+Column 2  Width=126
+
+[Table][0xAC9A836A,2]
+RefScale=26
+Column 0  Width=4
+Column 1  Weight=2.0000
+
+[Table][0xDDC24BCA,2]
+RefScale=26
+Column 1  Sort=0v
+
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2064 Split=X
-  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=937,1827 Split=Y Selected=0xE337ABC7
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=649,1757 CentralNode=1 Selected=0xE337ABC7
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=649,356 Split=X Selected=0x60B79D0E
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=342,356 Selected=0x60B79D0E
-      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=593,356 Selected=0x8E4F2BBD
-  DockNode      ID=0x00000003 Parent=0x7C6B3D9B SizeRef=2901,1827 Selected=0xC5308903
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=Y
+  DockNode      ID=0x00000001 Parent=0x7C6B3D9B SizeRef=3840,1673 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=618,1827 CentralNode=1 Selected=0xE192E354
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=3220,1827 Selected=0xC5308903
+  DockNode      ID=0x00000004 Parent=0x7C6B3D9B SizeRef=3840,440 Split=X Selected=0x60B79D0E
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=3533,387 Split=X Selected=0xB80FFB58
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=619,440 Selected=0x60B79D0E
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=2912,440 Selected=0xB80FFB58
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=305,387 Selected=0x8E4F2BBD
 
