New imgui layout.

--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -9,20 +9,20 @@ Size=1296,1437
 Collapsed=0
 
 [Window][Particles render]
-Pos=620,0
-Size=3220,1852
+Pos=621,0
+Size=2906,1673
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Performance]
-Pos=0,1675
-Size=619,440
+Pos=3223,1675
+Size=304,440
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=618,1673
+Size=619,1673
 Collapsed=0
 DockId=0x00000002,1
 
@@ -38,20 +38,20 @@ Collapsed=0
 DockId=0x00000002,2
 
 [Window][Some]
-Pos=3535,1675
-Size=305,440
+Pos=3529,0
+Size=311,2115
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Assets]
 Pos=0,0
-Size=618,1673
+Size=619,1673
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Game render]
-Pos=620,0
-Size=3220,1673
+Pos=621,0
+Size=2906,1673
 Collapsed=0
 DockId=0x00000003,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,0
-Size=618,1673
+Size=619,1673
 Collapsed=0
 DockId=0x00000002,0
 
@@ -105,10 +105,10 @@ Size=1443,1284
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
-Pos=621,1675
-Size=2912,440
+Pos=0,1675
+Size=3221,440
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
 IsChild=1
@@ -195,13 +195,13 @@ RefScale=26
 Column 1  Sort=0v
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=Y
-  DockNode      ID=0x00000001 Parent=0x7C6B3D9B SizeRef=3840,1673 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=618,1827 CentralNode=1 Selected=0xE192E354
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=3220,1827 Selected=0xC5308903
-  DockNode      ID=0x00000004 Parent=0x7C6B3D9B SizeRef=3840,440 Split=X Selected=0x60B79D0E
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=3533,387 Split=X Selected=0xB80FFB58
-      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=619,440 Selected=0x60B79D0E
-      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=2912,440 Selected=0xB80FFB58
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=305,387 Selected=0x8E4F2BBD
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X
+  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=3527,2115 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=3840,1673 Split=X
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=619,1827 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2906,1827 Selected=0xC5308903
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3840,440 Split=X Selected=0xB80FFB58
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=3221,440 Selected=0xB80FFB58
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=304,440 Selected=0x60B79D0E
+  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=311,2115 Selected=0x8E4F2BBD
 
