Remove border line code.

--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\Step.Engine\Step.Engine.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Assets\Textures\" />
+    </ItemGroup>
+
 </Project>
