--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -9,20 +9,20 @@ Size=1296,1437
 Collapsed=0
 
 [Window][Particles render]
-Pos=621,0
-Size=2906,1673
+Pos=530,0
+Size=2835,1635
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Performance]
-Pos=3059,1811
-Size=468,304
+Pos=2808,1637
+Size=557,478
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=528,1809
+Size=528,1635
 Collapsed=0
 DockId=0x00000002,1
 
@@ -38,20 +38,20 @@ Collapsed=0
 DockId=0x00000002,2
 
 [Window][Some]
-Pos=3529,0
-Size=311,2115
+Pos=3367,0
+Size=473,2115
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Assets]
 Pos=0,0
-Size=528,1809
+Size=528,1635
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Game render]
 Pos=530,0
-Size=2997,1809
+Size=2835,1635
 Collapsed=0
 DockId=0x00000003,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,0
-Size=528,1809
+Size=528,1635
 Collapsed=0
 DockId=0x00000002,0
 
@@ -105,8 +105,8 @@ Size=1443,1284
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
-Pos=0,1811
-Size=3057,304
+Pos=0,1637
+Size=2806,478
 Collapsed=0
 DockId=0x00000007,0
 
@@ -196,12 +196,12 @@ Column 1  Sort=0v
 
 [Docking][Data]
 DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X
-  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=3527,2115 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=3840,751 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=528,1827 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2997,1827 Selected=0xC5308903
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3840,304 Split=X Selected=0xB80FFB58
-      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=3057,440 Selected=0xB80FFB58
-      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=468,440 Selected=0x60B79D0E
-  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=311,2115 Selected=0x8E4F2BBD
+  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=3365,2115 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=3840,1635 Split=X
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=528,1827 CentralNode=1 Selected=0x26CE0345
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2835,1827 Selected=0x473925C7
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3840,478 Split=X Selected=0xB80FFB58
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=2806,440 Selected=0xB80FFB58
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=557,440 Selected=0x60B79D0E
+  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=473,2115 Selected=0x8E4F2BBD
 
