--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -22,7 +22,7 @@ DockId=0x00000008,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=528,1635
+Size=619,1635
 Collapsed=0
 DockId=0x00000002,1
 
@@ -45,13 +45,13 @@ DockId=0x00000006,0
 
 [Window][Assets]
 Pos=0,0
-Size=528,1635
+Size=619,1635
 Collapsed=0
 DockId=0x00000002,2
 
 [Window][Game render]
-Pos=530,0
-Size=2835,1635
+Pos=621,0
+Size=2744,1635
 Collapsed=0
 DockId=0x00000003,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,0
-Size=528,1635
+Size=619,1635
 Collapsed=0
 DockId=0x00000002,0
 
@@ -198,8 +198,8 @@ Column 1  Sort=0v
 DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X
   DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=3365,2115 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=3840,1635 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=528,1827 CentralNode=1 Selected=0x26CE0345
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2835,1827 Selected=0x473925C7
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=619,1827 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2744,1827 Selected=0xC5308903
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3840,478 Split=X Selected=0xB80FFB58
       DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=2806,440 Selected=0xB80FFB58
       DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=557,440 Selected=0x60B79D0E
