--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -1,207 +1,93 @@
+[Window][WindowOverViewport_11111111]
+Pos=0,0
+Size=3840,2064
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Main Window]
-Pos=300,65
-Size=1296,1437
+[Window][Assets]
+Pos=0,0
+Size=608,1531
 Collapsed=0
+DockId=0x00000004,2
 
-[Window][Particles render]
-Pos=530,0
-Size=2835,1635
+[Window][Some]
+Pos=3384,0
+Size=456,1572
 Collapsed=0
-DockId=0x00000003,1
-
-[Window][Performance]
-Pos=2808,1637
-Size=557,478
-Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000B,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=619,1635
+Size=608,1531
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000004,1
 
-[Window][Gameplay]
-Size=937,1757
+[Window][Dear ImGui Debug Log]
+Pos=0,1533
+Size=2867,531
 Collapsed=0
-DockId=0x00000002,0
-
-[Window][Editor]
-Pos=471,64
-Size=1035,1544
-Collapsed=0
-DockId=0x00000002,2
-
-[Window][Some]
-Pos=3367,0
-Size=473,2115
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Assets]
-Pos=0,0
-Size=619,1635
-Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000001,0
 
 [Window][Game render]
-Pos=621,0
-Size=2744,1635
+Pos=610,0
+Size=2714,1531
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000009,0
 
-[Window][WindowOverViewport_11111111]
-Pos=0,0
-Size=3840,2115
+[Window][Game stat]
+Pos=3326,796
+Size=514,470
 Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Performance]
+Pos=2869,1533
+Size=971,531
+Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene]
 Pos=0,0
-Size=619,1635
+Size=608,1531
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
-[Window][Dear ImGui Demo]
-Pos=337,930
-Size=1288,969
+[Window][Engine controls]
+Pos=3326,1268
+Size=514,263
 Collapsed=0
+DockId=0x00000008,0
 
-[Window][Dear ImGui Style Editor]
-Pos=2635,437
-Size=913,1202
+[Window][Game controls]
+Pos=3326,0
+Size=514,794
 Collapsed=0
+DockId=0x00000005,0
 
-[Window][DockSpace Demo]
-Size=3840,2115
+[Window][Particles render]
+Pos=658,0
+Size=2666,1531
 Collapsed=0
-
-[Window][Example: Documents]
-Pos=2074,48
-Size=1113,2109
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=1356,499
-Size=926,689
-Collapsed=0
-
-[Window][Example: Property editor/##tree_73339443]
-IsChild=1
-Size=300,641
-
-[Window][Example: Assets Browser]
-Pos=1286,577
-Size=2185,1254
-Collapsed=0
-
-[Window][Dear ImGui Metrics/Debugger]
-Pos=877,460
-Size=1443,1284
-Collapsed=0
-
-[Window][Dear ImGui Debug Log]
-Pos=0,1637
-Size=2806,478
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
-IsChild=1
-Size=1343,260
-
-[Window][Dear ImGui ID Stack Tool]
-Pos=60,60
-Size=683,208
-Collapsed=0
-
-[Window][About Dear ImGui]
-Pos=781,898
-Size=1123,234
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=1113,857
-Size=948,691
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=1045,382
-Size=1171,929
-Collapsed=0
-
-[Window][Example: Simple layout/left pane_AED60EF8]
-IsChild=1
-Size=150,849
-
-[Window][Example: Auto-resizing window]
-Pos=706,346
-Size=1291,762
-Collapsed=0
-
-[Window][Same title as another window##1]
-Pos=950,633
-Size=885,100
-Collapsed=0
-
-[Window][Same title as another window##2]
-Pos=752,647
-Size=885,100
-Collapsed=0
-
-[Window][###AnimatedTitle]
-Pos=939,546
-Size=479,74
-Collapsed=0
-
-[Window][Example: Long text display]
-Pos=875,632
-Size=520,600
-Collapsed=0
-
-[Table][0x49F8DCEA,3]
-RefScale=26
-Column 0  Weight=1.0000
-Column 1  Width=168
-Column 2  Width=252
-
-[Table][0x45A0E60D,7]
-RefScale=26
-Column 0  Width=98
-Column 1  Width=224
-Column 2  Width=224
-Column 3  Width=224
-Column 4  Width=224
-Column 5  Width=224
-Column 6  Width=224
-
-[Table][0x64418101,3]
-RefScale=26
-Column 0  Width=126
-Column 1  Width=126
-Column 2  Width=126
-
-[Table][0xAC9A836A,2]
-RefScale=26
-Column 0  Width=4
-Column 1  Weight=2.0000
-
-[Table][0xDDC24BCA,2]
-RefScale=26
-Column 1  Sort=0v
+DockId=0x00000009,1
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X
-  DockNode      ID=0x00000005 Parent=0x7C6B3D9B SizeRef=3365,2115 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=3840,1635 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=619,1827 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=2744,1827 Selected=0xC5308903
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3840,478 Split=X Selected=0xB80FFB58
-      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=2806,440 Selected=0xB80FFB58
-      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=557,440 Selected=0x60B79D0E
-  DockNode      ID=0x00000006 Parent=0x7C6B3D9B SizeRef=473,2115 Selected=0x8E4F2BBD
+DockSpace             ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2064 Split=Y
+  DockNode            ID=0x00000003 Parent=0x7C6B3D9B SizeRef=3840,1531 Split=X
+    DockNode          ID=0x0000000A Parent=0x00000003 SizeRef=0,0 Split=X Selected=0x0F824741
+      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=608,766 CentralNode=1 Selected=0xE192E354
+      DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=3230,766 Split=X Selected=0xC5308903
+        DockNode      ID=0x00000009 Parent=0x0000000E SizeRef=2714,1531 Selected=0xC5308903
+        DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=514,1531 Split=Y Selected=0x22EE34CD
+          DockNode    ID=0x00000007 Parent=0x0000000C SizeRef=514,1266 Split=Y Selected=0x22EE34CD
+            DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=514,794 Selected=0x22EE34CD
+            DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=514,470 Selected=0x0F824741
+          DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=514,263 Selected=0xF0A07098
+    DockNode          ID=0x0000000B Parent=0x00000003 SizeRef=456,857 Selected=0x8E4F2BBD
+  DockNode            ID=0x00000006 Parent=0x7C6B3D9B SizeRef=3840,531 Split=X Selected=0xB80FFB58
+    DockNode          ID=0x00000001 Parent=0x00000006 SizeRef=2867,531 Selected=0xB80FFB58
+    DockNode          ID=0x00000002 Parent=0x00000006 SizeRef=971,531 Selected=0x60B79D0E
 
