--- a/Step.Engine/Step.Engine.csproj
+++ b/Step.Engine/Step.Engine.csproj
@@ -8,13 +8,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ImGui.NET" Version="1.91.0.1" />
+    <!--<PackageReference Include="ImGui.NET" Version="1.91.0.1" />-->
+    <!--<PackageReference Include="OpenAL.Soft" Version="1.23.1" />
+    <PackageReference Include="OpenTK" Version="5.0.0-pre.13" />-->
+
     <PackageReference Include="NAudio" Version="2.2.1" />
-    <PackageReference Include="OpenAL.Soft" Version="1.23.1" />
-    <PackageReference Include="OpenTK" Version="5.0.0-pre.13" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Maths" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenAL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Global\Usings.cs">
+      <Link>External\Usings.cs</Link>
+    </Compile>
   </ItemGroup>
 
 </Project>
