separate game state

--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Assets]
 Pos=0,0
-Size=533,1671
+Size=465,1671
 Collapsed=0
 DockId=0x00000004,2
 
@@ -22,7 +22,7 @@ DockId=0x0000000B,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=533,1671
+Size=465,1671
 Collapsed=0
 DockId=0x00000004,1
 
@@ -33,8 +33,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game render]
-Pos=535,0
-Size=2737,1671
+Pos=467,0
+Size=2805,1671
 Collapsed=0
 DockId=0x00000009,0
 
@@ -52,7 +52,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=0,0
-Size=533,1671
+Size=465,1671
 Collapsed=0
 DockId=0x00000004,0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Particles render]
-Pos=610,0
-Size=2714,1582
+Pos=535,0
+Size=2737,1671
 Collapsed=0
 DockId=0x00000009,1
 
@@ -78,9 +78,9 @@ DockId=0x00000009,1
 DockSpace             ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=Y
   DockNode            ID=0x00000003 Parent=0x7C6B3D9B SizeRef=3840,1671 Split=X
     DockNode          ID=0x0000000A Parent=0x00000003 SizeRef=0,0 Split=X Selected=0x0F824741
-      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=533,766 CentralNode=1 Selected=0xE192E354
-      DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=3305,766 Split=X Selected=0xC5308903
-        DockNode      ID=0x00000009 Parent=0x0000000E SizeRef=2737,1531 Selected=0xC5308903
+      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=465,766 CentralNode=1 Selected=0x26CE0345
+      DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=3373,766 Split=X Selected=0xC5308903
+        DockNode      ID=0x00000009 Parent=0x0000000E SizeRef=2805,1531 Selected=0xC5308903
         DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=566,1531 Split=Y Selected=0x22EE34CD
           DockNode    ID=0x00000007 Parent=0x0000000C SizeRef=514,982 Split=Y Selected=0x22EE34CD
             DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=514,794 Selected=0x22EE34CD
