Add Gaussian blur post-processing effect ✨

--- a/Step.Engine/Step.Engine.csproj
+++ b/Step.Engine/Step.Engine.csproj
@@ -32,4 +32,8 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Graphics\Shaders\blur.glsl" />
+  </ItemGroup>
+
 </Project>
