Refactor shader resource paths and clean up unused shaders; improve debug editor toggle functionality.

--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Particles render]
-Pos=493,0
-Size=2779,1671
+Pos=635,0
+Size=2637,1671
 Collapsed=0
 DockId=0x00000009,1
 
@@ -78,7 +78,7 @@ DockId=0x00000009,1
 DockSpace             ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=Y
   DockNode            ID=0x00000003 Parent=0x7C6B3D9B SizeRef=3840,1671 Split=X
     DockNode          ID=0x0000000A Parent=0x00000003 SizeRef=0,0 Split=X Selected=0x0F824741
-      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=633,766 CentralNode=1 Selected=0xE192E354
+      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=633,766 CentralNode=1 Selected=0x26CE0345
       DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=3205,766 Split=X Selected=0xC5308903
         DockNode      ID=0x00000009 Parent=0x0000000E SizeRef=2637,1531 Selected=0xC5308903
         DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=566,1531 Split=Y Selected=0x22EE34CD
