Refactor font loading in Engine class; add ProggyClean font as an embedded resource

--- a/Step.Engine/Step.Engine.csproj
+++ b/Step.Engine/Step.Engine.csproj
@@ -34,5 +34,6 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Graphics\Shaders\**" />
+    <EmbeddedResource Include="EngineData\**" />
   </ItemGroup>
 </Project>
