Refactor UI components to utilize new font handling; implement IFontProvider and IFontAtlas interfaces for better font management. Add GameInfo class for game state management and integrate save/load functionality. Update Button and Label classes to accept font parameters. Enhance GameLoop and GameBuilder for improved game state handling.

--- a/Step.Main/Step.Main.csproj
+++ b/Step.Main/Step.Main.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="EngineData\Fonts\ProggyClean.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Assets\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
