--- a/Step.Engine.Tests/Step.Engine.Tests.csproj
+++ b/Step.Engine.Tests/Step.Engine.Tests.csproj
@@ -22,4 +22,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="..\Global\Usings.cs">
+      <Link>External\Usings.cs</Link>
+    </Compile>
+  </ItemGroup>
+
 </Project>
