--- a/Step.Engine/Step.Engine.csproj
+++ b/Step.Engine/Step.Engine.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.5" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
+    <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 
   <ItemGroup>
