--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -4,90 +4,68 @@ Size=3840,2115
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1673,717
-Size=469,291
+Pos=60,60
+Size=400,400
 Collapsed=0
 
 [Window][Assets]
 Pos=0,0
-Size=633,1671
+Size=661,2115
 Collapsed=0
-DockId=0x00000004,2
+DockId=0x00000001,2
 
-[Window][Some]
-Pos=3384,0
-Size=456,1572
+[Window][Game controls]
+Pos=3293,1519
+Size=547,596
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000003,0
 
 [Window][Audio Settings]
 Pos=0,0
-Size=633,1671
+Size=661,2115
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000001,1
 
-[Window][Dear ImGui Debug Log]
-Pos=0,1673
-Size=2867,442
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Game render]
-Pos=635,0
-Size=2637,1671
-Collapsed=0
-DockId=0x00000009,0
-
-[Window][Game stat]
-Pos=3274,618
-Size=566,364
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Performance]
-Pos=2869,1673
-Size=971,442
+[Window][Engine controls]
+Pos=3293,0
+Size=547,1517
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Dear ImGui Debug Log]
+Pos=663,1620
+Size=2024,495
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Game render]
+Pos=663,0
+Size=2628,1618
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Performance]
+Pos=2689,1620
+Size=602,495
+Collapsed=0
+DockId=0x0000000A,0
+
 [Window][Scene]
 Pos=0,0
-Size=633,1671
+Size=661,2115
 Collapsed=0
-DockId=0x00000004,0
-
-[Window][Engine controls]
-Pos=3274,984
-Size=566,687
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Game controls]
-Pos=3274,0
-Size=566,982
-Collapsed=0
-DockId=0x00000005,0
-
-[Window][Particles render]
-Pos=635,0
-Size=2637,1671
-Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace             ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=Y
-  DockNode            ID=0x00000003 Parent=0x7C6B3D9B SizeRef=3840,1671 Split=X
-    DockNode          ID=0x0000000A Parent=0x00000003 SizeRef=0,0 Split=X Selected=0x0F824741
-      DockNode        ID=0x00000004 Parent=0x0000000A SizeRef=633,766 CentralNode=1 Selected=0x26CE0345
-      DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=3205,766 Split=X Selected=0xC5308903
-        DockNode      ID=0x00000009 Parent=0x0000000E SizeRef=2637,1531 Selected=0xC5308903
-        DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=566,1531 Split=Y Selected=0x22EE34CD
-          DockNode    ID=0x00000007 Parent=0x0000000C SizeRef=514,982 Split=Y Selected=0x22EE34CD
-            DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=514,794 Selected=0x22EE34CD
-            DockNode  ID=0x0000000D Parent=0x00000007 SizeRef=514,470 Selected=0x0F824741
-          DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=514,687 Selected=0xF0A07098
-    DockNode          ID=0x0000000B Parent=0x00000003 SizeRef=456,857 Selected=0x8E4F2BBD
-  DockNode            ID=0x00000006 Parent=0x7C6B3D9B SizeRef=3840,442 Split=X Selected=0xB80FFB58
-    DockNode          ID=0x00000001 Parent=0x00000006 SizeRef=2867,531 Selected=0xB80FFB58
-    DockNode          ID=0x00000002 Parent=0x00000006 SizeRef=971,531 Selected=0x60B79D0E
+DockSpace         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X Selected=0xC5308903
+  DockNode        ID=0x00000004 Parent=0x7C6B3D9B SizeRef=3291,2115 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=661,2115 Selected=0xE192E354
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=2628,2115 Split=Y Selected=0xC5308903
+      DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=2681,1618 CentralNode=1 Selected=0xC5308903
+      DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=2681,495 Split=X Selected=0xB80FFB58
+        DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=2024,598 Selected=0xB80FFB58
+        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=602,598 Selected=0x60B79D0E
+  DockNode        ID=0x00000005 Parent=0x7C6B3D9B SizeRef=547,2115 Split=Y Selected=0xF0A07098
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=547,1517 Selected=0xF0A07098
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=547,596 Selected=0x22EE34CD
 
