Add map editor stub

--- a/Step.Main/imgui.ini
+++ b/Step.Main/imgui.ini
@@ -56,10 +56,22 @@ Size=661,2115
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Particles render]
+Pos=663,0
+Size=2628,1618
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Map editor]
+Pos=663,0
+Size=2628,1618
+Collapsed=0
+DockId=0x00000007,1
+
 [Docking][Data]
 DockSpace         ID=0x7C6B3D9B Window=0xA87D555D Pos=0,0 Size=3840,2115 Split=X Selected=0xC5308903
   DockNode        ID=0x00000004 Parent=0x7C6B3D9B SizeRef=3291,2115 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=661,2115 Selected=0xE192E354
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=661,2115 Selected=0x3D723CB9
     DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=2628,2115 Split=Y Selected=0xC5308903
       DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=2681,1618 CentralNode=1 Selected=0xC5308903
       DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=2681,495 Split=X Selected=0xB80FFB58
